Entity Framework Repository Base class is created.

--- a/BO/BO.csproj
+++ b/BO/BO.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAO\DAO.csproj" />
+    <ProjectReference Include="..\DAO\Dao.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
