--- a/BO/BO.csproj
+++ b/BO/BO.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.2.1" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DAO\Dao.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
